# honest-edge

./: .gitignore  GLOSSARY.md  NOTES.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
honest_edge/: __init__.py  data.py  evaluation.py  features.py  indicators.py  labeling.py  signal.py
honest_edge/data/: spy_daily.csv  spy_hourly.csv
notebooks/: 00-setup-and-data.ipynb  01-your-first-ml-loop.ipynb  02-how-backtests-lie.ipynb  03-the-signal-connors-rsi2.ipynb  04-labeling-trades-right.ipynb  05-features-that-describe-the-setup.ipynb  06-meta-labeling-catboost.ipynb
